apps/recall-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recall-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: recall-app
